# gauravlahoti.github.io

./: .gitignore  CLAUDE.md  CNAME  README.md  index.html
agent-portfolio/: index.html
agents/: index.html
agents/rag-lab/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
agents/rag-lab/app/: auth.py  main.py  sse.py  state.py
agents/rag-lab/app/llm/: anthropic_gen.py  base.py  google_gen.py  tools.py
agents/rag-lab/app/pipeline/: chunking.py  fusion.py  lexical.py  parsing.py  projection.py  retrieval.py
agents/rag-lab/app/pipeline/embeddings/: base.py  google.py  registry.py  voyage.py
agents/rag-lab/app/routes/: ingest.py  query.py  session.py
agents/rag-lab/app/store/: base.py  chroma_store.py
agents/rag-lab/frontend/: index.html  styles.css
agents/rag-lab/frontend/js/: app.js  chunksView.js  cosTable.js  demoData.js  embedView.js  eventGate.js  ingestController.js  legend.js  log.js  narrator.js  pointDetail.js  queryController.js  readout.js  retrievalView.js  scene.js  simulationController.js  sse.js  stageBanner.js  viewState.js
ai-concepts/: index.html
backend/: .gitignore  README.md  local-server.js  package.json  schema.sql  wrangler.toml
content/: README.md  agents.json  ai-concepts.json  mcp-lab.json  posts.json  profile.json
learn/: index.html
live-agents/: index.html
mcp-lab/: CLAUDE.md  index.html
portfolio-agent/: .env.example  CLAUDE.md  DESIGN_SPEC.md  Makefile  README.md  agents-cli-manifest.yaml  pyproject.toml
rag-lab/: index.html
resend_mcp_server/: Makefile  README.md  (+3 more)
(+203 files in other folders)
