[project]
name = "rag-lab"
version = "0.1.0"
description = "Agentic RAG Lab — 3D vector-space visual demo"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.8,<1.0.0",
    "uvicorn[standard]~=0.34.0",
    "anthropic>=0.40.0",
    "voyageai>=0.3.0",
    "chromadb>=0.5.0",
    "rank-bm25>=0.2.2",
    "numpy>=1.26.0",
    "pypdf>=4.0.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "google-genai>=1.0.0",
]

[project.optional-dependencies]
umap = [
    "umap-learn>=0.5.6",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.4.6",
    "ty>=0.0.1a0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
